k8s/flask/ns-flask-api.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: flask-api
spec: {}
status: {}
