k8s/flask/flaskapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-deployment
  namespace: flask-api
  labels:
    app: flaskapp
spec:
  selector:
    matchLabels:
      app: flaskapp
  replicas: 2
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
        - name: flaskapp
          image: ramirezy/flask-kubernetes
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
