k8s/flask/service-flask.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-api
  labels:
    app: flaskapp
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskapp
  type: LoadBalancer
